# stationeers-ic

./: .gitattributes  .gitignore  pyproject.toml
Mars2/: basic_atmos_temp.ic11  hydroponics_lighting.ic11  hydroponics_logistics.ic11  hydroponics_main.ic11  monitor_power_generation.ic11  solar_tracking.ic11  storm_watch.ic11
Mars2/atmospherics/: atmos_temp_basic.py  atmos_temp_monitoring.py
Mars2/common/: string.py
Mars2/hydroponics/: constants.py  farmer.ic11  farmer.py  hydroponics_farmer.ic11  hydroponics_farmer.py
Mars2/power/: monitor_power_generation.ic11  monitor_power_generation_1.ic11  monitor_power_generation_2.ic11  solar_tracking.py
Mars2/weather/: storm_watch.ic11  storm_watch.py
mars_1/: test.ic10  test.ic11
mars_2/: basic_atmos_temp.ic11  grow_light.ic11  solar_tracking.ic11
