[project]
name = "stationeers-ic"
version = "0.1.0"
description = ""
readme = ""
requires-python = "~=3.13.0"
dependencies = [
    "scipy>=1.16.3",
    "sicc",
]

[tool.uv.sources]
sicc = { git = "https://github.com/Alan-Chen99/sicc.git" }

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "ty>=0.0.5",
]
